--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					</div>
 
 					<footer>
-						<a href="#" class="button">Know More</a>
+						<a href="mission.html" class="button">Know More</a>
 					</footer>
 				</div>
 			</section>
