--- a/mission.html
+++ b/mission.html
@@ -38,7 +38,7 @@ rel="stylesheet">
                 
                 <div class="inner">
                     <p style="font-size:1.2em">
-                India features extremely poorly compared to the rest of the world when it comes to our science, mathematics and computer science education. While it is a country with one of the largest graduating populations of engineers, we do not integrate any part of the subject into our school education system. The greatest contributor to our country’s GDP is the service sector, with the IT industry providing the biggest chunk of it. The honest state of passing out engineers in our country is at an all-time low. According to a report, in 2015, more than 1.5 lakh engineering graduates were found to be unemployable.</p>
+                India features poorly compared to the rest of the world when it comes to our science, mathematics and computer science education. While it is a country with one of the largest graduating populations of engineers, we do not integrate any part of the subject into our school education system. The greatest contributor to our country’s GDP is the service sector, with the IT industry providing the biggest chunk of it. The honest state of passing out engineers in our country is at an all-time low. According to a report, in 2015, more than 1.5 lakh engineering graduates were found to be unemployable.</p>
                     <p style="font-size:1.2em">
                     The school education system holds the key to rectifying the entire education structure and quality of graduates of the country especially in the technology and science domains. We believe there are a few critical points that need to be addressed at the earliest.  
                     </p>
