--- a/faqs.html
+++ b/faqs.html
@@ -42,12 +42,16 @@ rel="stylesheet">
 
 
         <!-- Footer -->
-			<footer id="footer">
-                <p id="contact" style="font-size:2em;margin-bottom:1px"> Contact Us</p>
+				<footer id="footer">
+				<div class="socialmedia">
+
+					<h3>Get in touch</h3>
+
+				
                 <hr id="bottom"/>
-                 <div id="socialmedia">
+               
                     	<ul class="icons">
-														<li><a href="http://twitter.com/THEPIJAM" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="http://twitter.com/THEPIJAM" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="http://www.facebook.com/thepijammers/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="http://www.linkedin.com/company/thepijam" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
