--- a/index.html
+++ b/index.html
@@ -104,34 +104,13 @@
 
 		<!-- Footer -->
 			<footer id="footer">
-				<div class="inner">
+				<div class="socialmedia">
 
 					<h3>Get in touch</h3>
 
-					<form action="#" method="post">
-
-						<div class="field half first">
-							<label for="name">Name</label>
-							<input name="name" id="name" type="text" >
-						</div>
-						<div class="field half">
-							<label for="email">Email</label>
-							<input name="email" id="email" type="email" >
-						</div>
-						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="6" ></textarea>
-						</div>
-						<ul class="actions">
-							<li><input value="Send Message" class="button alt" type="submit"></li>
-						</ul>
-					</form>
-
-
-
-				</div>
+				
                 <hr id="bottom"/>
-                <div id="socialmedia">
+               
                     	<ul class="icons">
 							<li><a href="http://twitter.com/THEPIJAM" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="http://www.facebook.com/thepijammers/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
