--- a/faqs.html
+++ b/faqs.html
@@ -36,7 +36,19 @@ rel="stylesheet">
 						<p>We know what you're thinking! :)</p>
 					</header>
                     <div class="inner">
-                    <h1 id="notification">Sorry! We're currently working on this page to get you the best experience!</h1>
+                    <div id="faq-container">
+					<div id="question">Q. How is the program funded?</div>
+					<div id="answer">A. Since we are a Non-Profit orgranisation, our entire program sustains itself on corporate funding, grants and individual donations.</div>
+					<div id="question">Q. How do I donate?</div>
+					<div id="answer">A. Please send an email to shoaib.dar@thepijam.org and we'll provide you with all necessary details.</div>
+					<div id="question">Q. Where will the workshops be held?</div>
+					<div id="answer">A. The fortnight long workshop will be held in the school premises only.</div>
+					<div id="question">Q. Does the school hosting the workshop need to have a computer lab?</div>
+					<div id="answer">A. No, it is not necessary for the school to have a permanent computer lab. All equipment necessary for the workshop would be provided by
+					us. We would simply need a sufficient space with proper electrical supply where all the participanting students can sit and operate with computers comfortably. Since the workshop would last two weeks in the same school, a storage space for the equipment would be required. </div>
+					<div id="question">Q. What would be the timings of the workshop?</div>
+					<div id="answer">A. The workshop timings will be planned in consultation with the headmaster of the respective schools. However, we would need a minimum of 2 hours per day with the students.</div>
+					</div>
                 </div>
 			</section>
 
