--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <hr id="bottom"/>
                
                     	<ul class="icons">
-							<li><a href="mailto:webmaster@example.com" class="icon fa-envelope"><span class="label">Mail</span></a></li>
+							<li><a href="mailto:shoaib.dar@thepijam.org" class="icon fa-envelope"><span class="label">Mail</span></a></li>
 							<li><a href="http://twitter.com/THEPIJAM" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="http://www.facebook.com/thepijammers/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="http://www.linkedin.com/company/thepijam" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
