--- a/mission.html
+++ b/mission.html
@@ -71,7 +71,7 @@ rel="stylesheet">
 					<div class="4u 12u$(medium)" id="row-heading">
                         <img src="images/art-icon.png" height=100px/>
                         <h3>It’s not just Science? Its Art</h3> 
-								<p id="mission-para">A programmer starts with a blank canvas and uses his skills to express his ideas or solve a problem. </p>
+								<p id="mission-para">A programmer starts with a blank canvas and uses his/her skills to express his/her ideas or solve a problem. </p>
 							</div >
 							<div class="4u 12u$(medium)" id="row-heading">
                                 <img src="images/collaboration-Icon.jpg" height=100px/>
