--- a/mission.html
+++ b/mission.html
@@ -120,7 +120,7 @@ rel="stylesheet">
                     </div>
                         <br/>
                         <div>
-                        <p style="font-size:2em;text-align:center"> Currently we are offering the above facilities only to schools in Pune.</p></div>
+                        <p style="font-size:2em;text-align:center"> Currently we are offering the above mentioned programs only to schools in Pune.</p></div>
                         </div>
 			</section>
 
