--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<nav id="nav">
 						<a href="index.html">Home</a>
 						<a href="mission.html">The Mission</a>
+						<a href="projects.html">Projects</a>
 						<a href="faqs.html">FAQs</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
