--- a/mission.html
+++ b/mission.html
@@ -22,6 +22,7 @@ rel="stylesheet">
 					<nav id="nav">
 						<a href="index.html">Home</a>
 						<a href="mission.html">The Mission</a>
+						<a href="projects.html">The Mission</a>
 						<a href="faqs.html">FAQs</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
