--- a/videos.html
+++ b/videos.html
@@ -40,7 +40,7 @@ rel="stylesheet">
                         <div>
                            
                             <center>
-                        <h2> The Blind Stick - Student Project</h2>
+                        <h2 class="project-name"> The Blind Stick - Student Project</h2>
                                  <p>Students from Kasturba Gandhi English Medium School, Pune came up with this brilliant idea to help the Visually Impaired.
                             </p>
                 <iframe title="YouTube video player" class="youtube-player" type="text/html" 
