--- a/videos.html
+++ b/videos.html
@@ -37,10 +37,10 @@ rel="stylesheet">
 					</header>
 				<div class="inner"> 
                     
-                        <div>
+                        <div class="video-desc">
                            
                             <center>
-                        <h2 class="project-name"> The Blind Stick - Student Project</h2>
+                        <h2> The Blind Stick - Student Project</h2>
                                  <p>Students from Kasturba Gandhi English Medium School, Pune came up with this brilliant idea to help the Visually Impaired.
                             </p>
                 <iframe title="YouTube video player" class="youtube-player" type="text/html" 
