--- a/videos.html
+++ b/videos.html
@@ -37,11 +37,11 @@ rel="stylesheet">
 					</header>
 				<div class="inner"> 
                     
-                        <div class="video-desc">
+                        <div>
                            
                             <center>
-                        <h2> The Blind Stick - Student Project</h2>
-                                 <p>Students from Kasturba Gandhi English Medium School, Pune came up with this brilliant idea to help the Visually Impaired.
+                        <h2 class="video-desc"> The Blind Stick - Student Project</h2>
+                                 <p class="video-desc">Students from Kasturba Gandhi English Medium School, Pune came up with this brilliant idea to help the Visually Impaired.
                             </p>
                 <iframe title="YouTube video player" class="youtube-player" type="text/html" 
                         width="640" height="390" src="https://www.youtube.com/embed/u5mtNv4TWAU"
