--- a/videos.html
+++ b/videos.html
@@ -40,7 +40,7 @@ rel="stylesheet">
                         <div>
                            
                             <center>
-                        <h3 class="video-desc"> The Blind Stick - Student Project</h3>
+                        <h3 class="video-title"> The Blind Stick - Student Project</h3>
                                  <p class="video-desc">Students from Kasturba Gandhi English Medium School, Pune came up with this brilliant idea to help the Visually Impaired.
                             </p>
                 <iframe title="YouTube video player" class="youtube-player" type="text/html" 
@@ -52,8 +52,8 @@ rel="stylesheet">
                     <hr/>
                             <div>
                             <center>
-                        <h2> Traffic Light Problem - Pi Jam Session</h2>
-                                <p>A look inside a session conducted by the Pi Jam Foundation where students from a low-income community solved a real-world problem using technology.
+                        <h3 class="video-title"> Traffic Light Problem - Pi Jam Session</h3>
+                                <p class="video-desc">A look inside a session conducted by the Pi Jam Foundation where students from a low-income community solved a real-world problem using technology.
                                 </p>
                 <iframe title="YouTube video player" class="youtube-player" type="text/html" 
                         width="640" height="390" src="https://www.youtube.com/embed/5Bh0As27Ev0"
@@ -64,8 +64,8 @@ rel="stylesheet">
                     <hr/>
                     <div>
                         <center>      
-                        <h2> Sounds of Words - Pi Jam Session</h2>
-                            <p>A lesson on the poetic device- Onomatopoeia. This lesson integrates technology with English in the classroom.</p>
+                        <h3 class="video-title"> Sounds of Words - Pi Jam Session</h3>
+                            <p class="video-desc">A lesson on the poetic device- Onomatopoeia. This lesson integrates technology with English in the classroom.</p>
                <iframe title="YouTube video player" class="youtube-player" type="text/html" 
                         width="640" height="390" src="http://www.youtube.com/embed/W-Q7RMpINVo"
                        frameborder="0" allowFullScreen></iframe>
