--- a/videos.html
+++ b/videos.html
@@ -69,7 +69,7 @@ rel="stylesheet">
                         <h3 class="video-title"> Sounds of Words - Pi Jam Session</h3>
                             <p class="video-desc">A lesson on the poetic device- Onomatopoeia. This lesson integrates technology with English in the classroom.</p>
                <iframe title="YouTube video player" class="youtube-player" type="text/html" 
-                        width="640" height="390" src="http://www.youtube.com/embed/W-Q7RMpINVo"
+                        width="640" height="390" src="https://www.youtube.com/embed/ic8ousM-wpY"
                        frameborder="0" allowFullScreen></iframe>
                         </center>   
                             </div>
