--- a/videos.html
+++ b/videos.html
@@ -66,7 +66,7 @@ rel="stylesheet">
 			<br/>
                     <div>
                         <center>      
-                        <h3 class="video-title"> Sounds of Words - Pi Jam Session</h3>
+                        <h3 class="video-title"> Sound of Words - Pi Jam Session</h3>
                             <p class="video-desc">A lesson on the poetic device- Onomatopoeia. This lesson integrates technology with English in the classroom.</p>
                <iframe title="YouTube video player" class="youtube-player" type="text/html" 
                         width="640" height="390" src="https://www.youtube.com/embed/ic8ousM-wpY"
