--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,7 @@ rel="stylesheet">
 						<a href="index.html">Home</a>
 						<a href="mission.html">The Mission</a>
 						<a href="projects.html">Projects</a>
+						<a href="videos.html"> Videos </a>
 						<a href="faqs.html">FAQs</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
