--- a/videos.html
+++ b/videos.html
@@ -21,8 +21,10 @@ rel="stylesheet">
 				<div class="inner">
                     <a href="index.html"><img id="logoimage" src="images/final_edit_pijam copy.png" height=50px /><div id="logotext">The Pi Jam</div></a>
 					<nav id="nav">
-						<a href="index.html">Home</a>
+							<a href="index.html">Home</a>
 						<a href="mission.html">The Mission</a>
+						<a href="projects.html">Projects</a>
+						<a href="videos.html"> Videos </a>
 						<a href="faqs.html">FAQs</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
