--- a/videos.html
+++ b/videos.html
@@ -35,7 +35,7 @@ rel="stylesheet">
 			<section id="three" class="wrapper">
                 <header class="align-center">
 						<h2 >Videos</h2>
-						<p>Videos speak louder than words! </p>
+						<p>Videos speak louder than Text! </p>
 					</header>
 				<div class="inner"> 
                     
