--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 						<a href="projects.html">Projects</a>
 						<a href="videos.html"> Videos </a>
 						<a href="faqs.html">FAQs</a>
+						<a href="https://goo.gl/forms/yCkLF40MpSnz19OD2">Become a Volunteer</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
