--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,7 @@ rel="stylesheet">
 						<a href="projects.html">Projects</a>
 						<a href="videos.html"> Videos </a>
 						<a href="faqs.html">FAQs</a>
+						<a href="https://goo.gl/forms/yCkLF40MpSnz19OD2">Become a Volunteer</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
