--- a/register.html
+++ b/register.html
@@ -48,7 +48,7 @@ rel="stylesheet">
                     <div class="row display-flex">
                         
                          <div class="col-sm-8">
-                           <img style = "width:100%;height:100%; " src="images/LC_project.jpg"/>
+                           <img style = "width:100%;height:100%; " src="./images/LC_project.jpg"/>
 
                         </div>   
                          
