--- a/register.html
+++ b/register.html
@@ -58,7 +58,7 @@ rel="stylesheet">
                             <div class="row"><div class="col-xs-2"><i class="fa fa-calendar" aria-hidden="true"></i></div>     <div class="col-xs-10"><p>Febuary 17-18 | 10:00AM </p></div> 
                                 <div class="col-xs-2"><i class="fa fa-map-marker"></i> </div> <div class="col-xs-10"> <p>Kasturba Gandhi School, Pune</p></div> </div>
                             <button class="btn btn-primary btn-block" style="font-size:0.9em;font-family:'Roboto Condensed',sans-serif;" onclick="window.location.href='./success.html'">BOOK NOW</button>
-                            <p style="padding-top:10%;text-align:center;"> Share:&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//thepijam.org/register.html"><i class="fa fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//thepijam.org/&title=Check%20out%20Pi%20Jam's%20workshop%20on%20Physical%20Computing&summary=&source="><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"><i class="fa fa-twitter"></i>    </a></p>
+                            <p style="padding-top:10%;text-align:center;"> Share:&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//thepijam.org/"><i class="fa fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//thepijam.org/&title=Check%20out%20Pi%20Jam's%20workshop%20on%20Physical%20Computing&summary=&source="><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"><i class="fa fa-twitter"></i>    </a></p>
                             </div>
                         </div>
                     </div>
