--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 							<li><a href="http://www.facebook.com/thepijammers/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="http://www.linkedin.com/company/thepijam" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
-		<hr/>
-					<a href="privacy.html">Privacy</a>
+		<hr id="bottom"/>
+					<a href="privacy.html">Privacy Policy</a>
                 </div>
 			</footer>
 
