--- a/faqs.html
+++ b/faqs.html
@@ -71,6 +71,8 @@ rel="stylesheet">
 							<li><a href="http://www.facebook.com/thepijammers/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="http://www.linkedin.com/company/thepijam" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
+			<hr id="bottom"/>
+					<a href="privacy.html">Privacy Policy</a>
                 </div>
 			</footer>
 
